Fix spacing for file controls

--- a/src/ggrc/assets/stylesheets/_pin.scss
+++ b/src/ggrc/assets/stylesheets/_pin.scss
@@ -144,7 +144,7 @@
       &:hover {
         .file-controls {
           @include opacity(1);
-          left: -51px;
+          left: -28px;
         }
       }
     }
@@ -201,7 +201,7 @@
       &:hover {
         .file-controls {
           @include opacity(1);
-          left: -51px;
+          left: -27px;
         }
       }
     }
@@ -221,7 +221,7 @@
   padding-left: 5px;
   height: 20px;
   padding-top: 2px;
-  min-width: 45px;
+  min-width: 23px;
   i {
     @include opacity(.6);
     @include transition(opacity .2s ease);
@@ -253,7 +253,7 @@
     &:hover {
       .file-controls {
         @include opacity(1);
-        left: -50px;
+        left: -27px;
       }
     }
     a {
@@ -303,15 +303,8 @@
   }
 }
 
-.left-spacing {
-  margin-left: 35px;
-}
-
 .mapped-list {
   @extend %reset-list;
-  &.left-spacing {
-    margin-left: 20px;
-  }
   li {
     margin-bottom: 5px;
     position: relative;
@@ -338,7 +331,7 @@
     &:hover {
       .file-controls {
         @include opacity(1);
-        left: -50px;
+        left: -27px;
       }
     }
   }
